--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@popperjs/core": "^2.10.1",
+    "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aphrodite": "^2.4.0",
+    "autoprefixer": "^10.3.4",
+    "chart.js": "2.9.4",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.9",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "postcss": "^8.3.6",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "recompose": "^0.30.0",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "redux-state-sync": "^3.1.2",
+    "redux-storage-decorator-filter": "^1.1.8",
+    "remote-redux-devtools": "^0.5.16",
+    "seamless-immutable": "^7.1.4",
+    "sweetalert2": "^11.1.5",
+    "tailwindcss": "^2.2.15",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
